--- a/week1/pom.xml
+++ b/week1/pom.xml
@@ -7,6 +7,7 @@
     <groupId>com.spring.uber</groupId>
     <artifactId>hello-week1</artifactId>
     <version>1.0.0.BUILD-SNAPSHOT</version>
+    <packaging>war</packaging>
 
     <properties>
         <springframework.version>4.3.0.RELEASE</springframework.version>
@@ -51,7 +52,7 @@
                     <artifactId>maven-compiler-plugin</artifactId>
                     <version>3.2</version>
                     <configuration>
-                        <source>9.0</source>
+                        <source>1.8</source>
                         <target>1.8</target>
                     </configuration>
                 </plugin>
