:construction: Finished fleet-location-service, Started building fleet-location-simulator

--- a/week3-4/pom.xml
+++ b/week3-4/pom.xml
@@ -16,13 +16,14 @@
 
     <modules>
         <module>fleet-location-service</module>
-        <module>fleet-location-simulator</module>
-        <module>fleet-location-ingest</module>
-        <module>fleet-location-updater</module>
-        <module>service-location-service</module>
-        <module>dashboard</module>
-        <module>platform</module>
+        <!--<module>fleet-location-simulator</module>-->
+        <!--<module>fleet-location-ingest</module>-->
+        <!--<module>fleet-location-updater</module>-->
+        <!--<module>service-location-service</module>-->
+        <!--<module>dashboard</module>-->
+        <!--<module>platform</module>-->
         <module>fleet-location-service</module>
+        <module>fleet-location-simulator</module>
     </modules>
 
     <properties>
