--- a/week3-4/fleet-location-simulator/pom.xml
+++ b/week3-4/fleet-location-simulator/pom.xml
@@ -40,6 +40,7 @@
             <artifactId>JavaAPIforKml</artifactId>
             <version>2.2.1</version>
         </dependency>
+        <!--Google Map Api-->
         <dependency>
             <groupId>com.google.maps</groupId>
             <artifactId>google-maps-services</artifactId>
@@ -77,6 +78,11 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>org.demo</groupId>
+            <artifactId>fleet-location-service</artifactId>
+            <version>1.0.0.BUILD-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
