:construction: Build fleet-location-updater service (Finished model layer)

--- a/week3-4/pom.xml
+++ b/week3-4/pom.xml
@@ -18,6 +18,7 @@
         <module>fleet-location-service</module>
         <module>fleet-location-simulator</module>
         <module>fleet-location-ingest</module>
+        <module>fleet-location-updater</module>
         <!--<module>fleet-location-updater</module>-->
         <!--<module>service-location-service</module>-->
         <!--<module>dashboard</module>-->
