:construction: Built 'platform' service included 'eureka' service with Dockerfile and eureka configuration

--- a/week3-4/pom.xml
+++ b/week3-4/pom.xml
@@ -21,6 +21,7 @@
         <module>fleet-location-updater</module>
         <module>service-location-service</module>
         <module>dashboard</module>
+        <module>platform</module>
     </modules>
 
     <properties>
